:hammer: Fix icon align

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -254,7 +254,7 @@ main {
         position: absolute;
         left: 16px;
         top: 50%;
-        margin-top: -.75em;
+        margin-top: -.5em;
         font-size: 24px;
       }
     }
